Update unit test output
git-svn-id: https://cld2.googlecode.com/svn/trunk@10 b252ecd4-b096-bf77-eb8e-91563289f87e

--- a/internal/CLD2UnitTestOutput.html
+++ b/internal/CLD2UnitTestOutput.html
@@ -300,7 +300,7 @@ rang pulo sa pilipinas nga napasidunggan sa maong magasin sukad pa sa tuig </spa
 <br>
 DocTote::Dump
 [ 0]  tl     75B    42p 2025R,
-[ 5] ceb    233B   284p 23300R,
+[ 5] ceb    233B   272p 23300R,
   4 chunks scored<br>
 {Unreli tl.27R,75B} ceb.100R(75%) 309 bytes = CEBUANO* <br><br>
 [sr] <span style="background:#D8FFF3;color:#7F2F00;">
@@ -314,10 +314,10 @@ gitara je zauvijek promijenila glazbu i model precision se i danas pojavljuje u 
 <br>
 DocTote::Dump
 [12]  hr    241B   212p 24100R,
-[13]  sr    217B   201p 20844R,
+[13]  sr    217B   176p 21486R,
   4 chunks scored<br>
-{CloseLangPair: sr.96R,217B => hr}<br>
-hr.98R(99%) 459 bytes = CROATIAN  <br><br>
+{CloseLangPair: sr.99R,217B => hr}<br>
+hr.99R(99%) 459 bytes = CROATIAN  <br><br>
 [cs] <span style="background:#F8FFD8;color:#7F2F00;">
 a akci opakujte film uložen vykreslit gmail tokio smazat obsah adresáře nelze načíst sy</span> 
 [] <span style="background:#F8FFD8;color:#7F2F00;">
@@ -362,7 +362,7 @@ en.98R(99%) 251 bytes = ENGLISH  <br><br>
 a niipea kui sinu maksimaalne igakuine krediidi limiit on meie poolt heaks kiidetud on sinu kohustuseks see krediidilimiit </span> 
 <br>
 DocTote::Dump
-[ 8]  et    123B   155p 12300R,
+[ 8]  et    123B   143p 12300R,
   1 chunks scored<br>
 et.100R(99%) 124 bytes = ESTONIAN  <br><br>
 [fi] <span style="background:#D8F3FF;color:#000000;">
@@ -384,9 +384,9 @@ et modifier ses collections et exporter des configurations de collection toutefo
 il ne peut pas créer ni supprimer des collections enfin il a accès aux fonctions </span> 
 <br>
 DocTote::Dump
-[ 4]  fr    254B   347p 23564R,
+[ 4]  fr    254B   336p 24062R,
   3 chunks scored<br>
-fr.92R(99%) 255 bytes = FRENCH  <br><br>
+fr.94R(99%) 255 bytes = FRENCH  <br><br>
 [gl] <span style="background:#F8D8FF;color:#7F2F00;">
 debe ser como mínimo taranto tendas de venda polo miúdo cociñas servizos bordado ca</span> 
 [] <span style="background:#F8D8FF;color:#7F2F00;">
@@ -404,7 +404,7 @@ satu abaana ba azugaadi lukumi mu ebikumi bibiri mu abiri mu babiri abaana ba ad
 kamu lukaaga mu nltaaga mu mukaaga abaana ba biguvaayi enkumi bbiri mu ataano mu mukaaga </span> 
 <br>
 DocTote::Dump
-[14]  lg    251B   340p 25100R,
+[14]  lg    251B   332p 25100R,
   3 chunks scored<br>
 lg.100R(99%) 252 bytes = GANDA  <br><br>
 [de] <span style="background:#FFD8EB;color:#000000;">
@@ -519,9 +519,9 @@ guwak pesenan mu wes di simpen sante wae pesenan mu wes ke kirim mbuh te</span>
 kan ora pesenan e ke kethok pesenan mu wes ke kirim mbuh tekan ora pesenan </span> 
 <br>
 DocTote::Dump
-[ 0]  jw    254B   153p 23150R,
+[ 0]  jw    254B   146p 22187R,
   3 chunks scored<br>
-jw.91R(99%) 255 bytes = JAVANESE  <br><br>
+jw.87R(99%) 255 bytes = JAVANESE  <br><br>
 [rw] <span style="background:#F8D8FF;color:#007F7F;">
 dore ibyo ukeneye kumenya ukwo watubona ibibazo byinshi abandi babaza ububonero </span> 
 [] <span style="background:#F8D8FF;color:#007F7F;">
@@ -606,7 +606,7 @@ mt.100R(99%) 250 bytes = MALTESE  <br><br>
 रात झाली दक्षिण मध्य भारतातील पर्यटन आणि तेलुगू चित्रपटनिर्मितीचे हैदराबाद हे केंद्र आहे </span> 
 <br>
 DocTote::Dump
-[ 0]  mr   1190B   736p 117890R,
+[ 0]  mr   1190B   730p 117890R,
 [ 2]  ur     18B    14p  648R,
 [ 3]  hi     16B    10p 1600R,
 [12]  te     29B    29p 2900R,
@@ -626,14 +626,14 @@ a er obligatorisk tidsforskyvning plassering av katalogsøk planinformasjon logg
 navn kontoinformasjon passord domene gruppeinformasjon alle kampanjesporing alternativ bruker grupper oppgaveplanlegger oppgavehistorikk kontosammendrag antall </span> 
 <br>
 DocTote::Dump
-[10]  no    254B   250p 25400R,
+[10]  no    254B   239p 25400R,
   2 chunks scored<br>
 no.100R(99%) 255 bytes = NORWEGIAN  <br><br>
 [fa] <span style="background:#D8FFF3;color:#3F7F00;">
 آب خوردن عجله می کردند به جای باز ی کتک کاری می کردند و همه چيز مثل قبل بود فقط من ماندم و يک دنيا حرف و انتظار تا عاقبت رسيد احضاريه ی ای با </span> 
 <br>
 DocTote::Dump
-[13]  fa    249B   231p 24900R,
+[13]  fa    249B   225p 24900R,
   1 chunks scored<br>
 fa.100R(99%) 250 bytes = PERSIAN  <br><br>
 [pl] <span style="background:#FFEBD8;color:#000000;">
@@ -709,7 +709,7 @@ autonomnih pokrajina saveznim zakonom može se propisati poseban sastav organiza
 odbrane članove saveta federacije bira na predlog predsedništva savezna skupština iz reda društveno političkih i drugih javnih </span> 
 <br>
 DocTote::Dump
-[13]  sr    254B   213p 25400R,
+[13]  sr    254B   209p 25400R,
   2 chunks scored<br>
 sr.100R(99%) 255 bytes = SERBIAN  <br><br>
 [sk] <span style="background:#EFD8FF;color:#3F7F00;">
@@ -840,7 +840,7 @@ yaki irisan tipis daging sapi sayur sayuran dan tahu di dalam panci besi yang </
 dimasak di atas meja makan dengan cara direbus sukiyaki dimakan dengan mence </span> 
 <br>
 DocTote::Dump
-[ 6]  id    237B   257p 23700R,
+[ 6]  id    237B   250p 23700R,
 [ 8]  ms     74B    77p 7400R,
   4 chunks scored<br>
 {CloseLangPair: ms.100R,74B => id}<br>
@@ -869,18 +869,18 @@ after the construction of the first successful gasoline fueled automobiles the q
 <br>
 DocTote::Dump
 [ 0]  en    300B   424p 30000R,
-[ 4]  fr    201B   230p 19380R,
+[ 4]  fr    201B   219p 19920R,
   5 chunks scored<br>
-en.100R(59%) fr.96R(40%) 502 bytes = FRENCH  <br><br>
-[sw] <span style="background:#D8E7FF;color:#6F7F00;">
+en.100R(59%) fr.99R(40%) 502 bytes = FRENCH  <br><br>
+[cy] <span style="background:#FFD8F7;color:#7F5F00;">
 qpdbmrmxyzptlkuuddlrlrbas las les qpdbmrmx</span> 
-[] <span style="background:#D8E7FF;color:#6F7F00;">
+[] <span style="background:#FFD8F7;color:#7F5F00;">
 yzptlkuuddlrlrbas el la qpdbmrmxyzptlkuuddlrlrbas </span> 
 <br>
 DocTote::Dump
-[14]  sw     92B   108p 9200R,
+[10]  cy     92B   108p 9200R,
   2 chunks scored<br>
-sw.100R(98%) 93 bytes = SWAHILI  <br><br>
+cy.100R(98%) 93 bytes = WELSH  <br><br>
 PASS
 
 </span></body></html>
